--- a/design/template/debug/debug.phtml
+++ b/design/template/debug/debug.phtml
@@ -10,6 +10,7 @@ var DEBUG_TOOLBAR_MEDIA_URL = "<?php echo $this->getDebugMediaUrl(); ?>";
 </script>
 <script type="text/javascript" src="<?php echo $this->getDebugMediaUrl(); ?>js/toolbar.js"></script>
 <script type="text/javascript" src="<?php echo $this->getDebugMediaUrl(); ?>js/custom.js"></script>
+<script type="text/javascript" src="<?php echo $this->getDebugMediaUrl(); ?>js/Chart.min.js"></script>
 
 <div id="djDebug" style="display:none;">
 	<div style="display:none;" id="djDebugToolbar">
