--- a/skin/css/toolbar.css
+++ b/skin/css/toolbar.css
@@ -400,3 +400,8 @@
 #djDebug .highlight .cp { color:#333 } /* Comment.Preproc */
 
 #djDebug div.loader { background: url(../img/loader.gif); margin: 100px auto; width: 64px; height: 64px; border: none; }
+
+.debug-logs{
+    max-height: 200px;
+    overflow-y : auto;
+}
