--- a/design/template/debug/events.phtml
+++ b/design/template/debug/events.phtml
@@ -1,10 +1,6 @@
 <?php $events = $this->getEvents(); ?>
+<h4><?php echo $this->__("Events/Observers") ?></h4>
 <table>
-	<thead>
-		<tr>
-            <th><?php echo $this->__("Events/Observers") ?></th>
-		</tr>
-	</thead>
     <tbody>
         <?php $row = 0; ?>
         <?php foreach($events as $event ): ?>
