--- a/skin/css/toolbar.css
+++ b/skin/css/toolbar.css
@@ -179,7 +179,7 @@
 
 #djDebug .djDebugPanelContent {
 	position:absolute;
-	top:51px;
+	top:0;
 	right:0;
 	bottom:0;
 	left:0;
@@ -404,4 +404,20 @@
 .debug-logs{
     max-height: 200px;
     overflow-y : auto;
+}
+.debug-container-analytics{
+    width: 200px;
+    padding: 15px;
+    float: left;
+}
+.doughnut-legend .picto-doughnut-legend{
+    height: 10px;
+    width: 10px;
+    display: block;
+    float: left;
+    margin: 5px !important;
+}
+.doughnut-legend li{
+    font-weight: bold;
+    clear: both;
 }
