--- a/skin/css/toolbar.css
+++ b/skin/css/toolbar.css
@@ -401,23 +401,34 @@
 
 #djDebug div.loader { background: url(../img/loader.gif); margin: 100px auto; width: 64px; height: 64px; border: none; }
 
-.debug-logs{
+#djDebug .debug-logs{
     max-height: 200px;
     overflow-y : auto;
 }
-.debug-container-analytics{
-    width: 200px;
+#djDebug .debug-container-analytics{
+    width: 170px;
     padding: 15px;
     float: left;
+    position: relative;
 }
-.doughnut-legend .picto-doughnut-legend{
+#djDebug .doughnut-legend .picto-doughnut-legend{
     height: 10px;
     width: 10px;
     display: block;
     float: left;
-    margin: 5px !important;
+    margin: 5px;
 }
-.doughnut-legend li{
+#djDebug .doughnut-legend li{
     font-weight: bold;
     clear: both;
+}
+#djDebug .container-myChart-total{
+    position: absolute;
+    top: 126px;
+    left: 57px;
+    font-size: 27px;
+    font-weight: bold;
+    color: grey;
+    text-align: center;
+    width: 85px;
 }
