--- a/design/template/debug/analytics.phtml
+++ b/design/template/debug/analytics.phtml
@@ -55,10 +55,10 @@
     }
     //]]>
 </script>
-<?php foreach ($this->getList() as $type => $label) : ?>
+<?php foreach ($this->getList() as $type => $info) : ?>
     <div id="container-myChart-<?php echo $type; ?>" class="debug-container-analytics">
-        <h4><?php echo $label; ?></h4>
-        <div class="container-myChart-total"><?php echo array_sum($this->getResume($type)); ?>ms</div>
+        <h4><?php echo $info['label']; ?></h4>
+        <div class="container-myChart-total"><?php echo array_sum($this->getResume($type)); ?><?php echo $info['unit']; ?></div>
         <canvas id="myChart-<?php echo $type; ?>" width="170" height="170"></canvas>
     </div>
     <script>
