--- a/design/template/debug/analytics.phtml
+++ b/design/template/debug/analytics.phtml
@@ -25,7 +25,7 @@
         //Boolean - Whether we animate scaling the Doughnut from the centre
         animateScale : false,
 
-        tooltipTemplate: "<%= value %>ms",
+        tooltipTemplate: "<%= value %>",
 
         //String - A legend template
         legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\" class=\"picto-<%=name.toLowerCase()%>-legend\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>"
@@ -65,6 +65,7 @@
         //<![CDATA[
         var ctx_<?php echo $type; ?> = document.getElementById("myChart-<?php echo $type; ?>").getContext("2d");
 
+        options.tooltipTemplate = "<%= value %><?php echo $info['unit']; ?>";
         var myChart_<?php echo $type; ?> = new Chart(ctx_<?php echo $type; ?>).Doughnut(generateObjectDatas(<?php echo json_encode($this->getResume($type)); ?>),options);
 
         var legend_<?php echo $type; ?> = myChart_<?php echo $type; ?>.generateLegend();
