--- a/skin/css/toolbar.css
+++ b/skin/css/toolbar.css
@@ -154,7 +154,7 @@
 	background-color:#eee;
 	color:#666;
 	z-index:100000000;
-    width: 500px;
+    width: 50%;
 }
 
 #djDebug .panelContent > div {
@@ -406,7 +406,7 @@
     overflow-y : auto;
 }
 #djDebug .debug-container-analytics{
-    width: 170px;
+    width: 195px;
     padding: 15px;
     float: left;
     position: relative;
@@ -424,6 +424,7 @@
 }
 #djDebug .container-myChart-total{
     position: absolute;
+    z-index: -1;
     top: 134px;
     left: 57px;
     font-size: 24px;
