--- a/design/template/debug/versions.phtml
+++ b/design/template/debug/versions.phtml
@@ -4,7 +4,7 @@
 
 <?php $items = $this->getItems(); ?>
 <h4>Modules ajoutées</h4>
-<table>
+<table class="debug-container">
 	<thead>
 		<tr>
             <th><?php echo $this->__("Module") ?></th>
@@ -29,7 +29,7 @@
 	</tbody>
 </table>
 <h4>Modules Natifs</h4>
-<table>
+<table class="debug-container">
     <thead>
     <tr>
         <th><?php echo $this->__("Module") ?></th>
