--- a/design/template/debug/blocks.phtml
+++ b/design/template/debug/blocks.phtml
@@ -20,7 +20,7 @@ $layoutBlocks = $this->getLayoutBlocks();
 
 <h4><?php echo $this->__('Rendered Blocks') ?></h4>
 <p>List of all rendered blocks.</p>
-<table>
+<table class="debug-container">
 	<thead>
 		<tr>
 			<th>#</th>
@@ -57,7 +57,7 @@ $layoutBlocks = $this->getLayoutBlocks();
 
 <h4><?php echo $this->__('Layout Blocks') ?></h4>
 <p>List of all instantiated blocks, few of them might not be rendered.</p>
-<table>
+<table class="debug-container">
 	<thead>
 		<tr>
 			<th>#</th>
