--- a/design/template/debug/models.phtml
+++ b/design/template/debug/models.phtml
@@ -7,7 +7,7 @@ $collections = $this->getCollections();
 $queries = $this->getQueries();
 ?>
 <h4><?php echo $this->__('MODELS') ?></h4>
-<table>
+<table class="debug-container">
 	<thead>
 		<tr>
 			<th><?php echo $this->__('Resource Name') ?></th>
@@ -29,7 +29,7 @@ $queries = $this->getQueries();
 </table>
 
 <h4><?php echo $this->__('COLLECTIONS') ?></h4>
-<table>
+<table class="debug-container">
 	<thead>
 		<tr>
 			<th><?php echo $this->__('Type') ?></th>
@@ -52,7 +52,7 @@ $queries = $this->getQueries();
 <h4><?php echo $this->__('QUERIES') ?></h4>
 <?php if( $queries ): ?>
     <p><a class="toggleTemplate" href="<?php echo Mage::getUrl('debug/index/toggleSqlProfiler') ?>">Disable SQL Profiler</a></p>
-<table>
+<table class="debug-container">
 	<thead>
 		<tr>
 			<th><?php echo $this->__('Time') ?></th>
