--- a/design/template/debug/models.phtml
+++ b/design/template/debug/models.phtml
@@ -6,6 +6,7 @@ Mage::helper('debug')->sortModelsByOccurrences($items);
 $collections = $this->getCollections();
 $queries = $this->getQueries();
 ?>
+
 <h4><?php echo $this->__('MODELS') ?></h4>
 <table class="debug-container">
 	<thead>
@@ -27,6 +28,49 @@ $queries = $this->getQueries();
 		<?php endforeach ?>
 	</tbody>
 </table>
+<h4><?php echo $this->__('QUERIES') ?></h4>
+<?php if( $queries ): ?>
+
+    <?php $metrics = Mage::getModel('debug/metrics'); ?>
+    <?php foreach( $queries as $item ): ?>
+        <?php $metrics->addTime($item->getElapsedSecs()); ?>
+    <?php endforeach; ?>
+    <p><a class="toggleTemplate" href="<?php echo Mage::getUrl('debug/index/toggleSqlProfiler') ?>">Disable SQL Profiler</a></p>
+    <table class="debug-container">
+        <thead>
+        <tr>
+            <th><?php echo $this->__('Query') ?></th>
+            <th colspan="2"><?php echo $this->__('Time') ?></th>
+        </tr>
+        </thead>
+        <tbody>
+        <?php $row = 0; ?>
+        <?php foreach( $queries as $item ): ?>
+            <tr class="<?php echo ( ($row % 2 ? 'djDebugOdd' : 'djDebugEven')) ?>">
+                <td class="syntax">
+                    <div class="djDebugSqlWrap">
+                        <div class="djDebugSql"><?php echo $item->getQuery() ?>
+                            <?php if( count($item->getQueryParams()) ): ?>
+                                <br/><strong>Params:</strong> <?php echo implode(', ', $item->getQueryParams()); ?>
+                            <?php endif; ?>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class=""><?php echo sprintf("%.4f", $item->getElapsedSecs()) ?>&nbsp;s</div>
+                </td>
+                <td>
+                    <?php  $level = $metrics->getLevel($item->getElapsedSecs()); ?>
+                    <div class="pastilles-level pastille-level<?php echo $level['level'] ?>" title="<?php echo $level['title']; ?>" ></div>
+                </td>
+            </tr>
+            <?php $row++; ?>
+        <?php endforeach ?>
+        </tbody>
+    </table>
+<?php else: ?>
+    <p>SQL Profiler is not enabled. <a class="toggleTemplate" href="<?php echo Mage::getUrl('debug/index/toggleSqlProfiler') ?>">Enable SQL Profiler</a></p>
+<?php endif; ?>
 
 <h4><?php echo $this->__('COLLECTIONS') ?></h4>
 <table class="debug-container">
@@ -49,44 +93,4 @@ $queries = $this->getQueries();
 		<?php endforeach ?>
 	</tbody>
 </table>
-<h4><?php echo $this->__('QUERIES') ?></h4>
-<?php if( $queries ): ?>
-    <p><a class="toggleTemplate" href="<?php echo Mage::getUrl('debug/index/toggleSqlProfiler') ?>">Disable SQL Profiler</a></p>
-<table class="debug-container">
-	<thead>
-		<tr>
-			<th><?php echo $this->__('Time') ?></th>
-			<th><?php echo $this->__('Action') ?></th>
-			<th><?php echo $this->__('Query') ?></th>
-		</tr>
-	</thead>
-	<tbody>
-		<?php $row = 0; ?>
-		<?php foreach( $queries as $item ): ?>
-			<tr class="<?php echo ( ($row % 2 ? 'djDebugOdd' : 'djDebugEven')) ?>">
-				<td>
-					 	 <div class=""><?php echo sprintf("%.4f", $item->getElapsedSecs()) ?>&nbsp;s</div>
-				</td>
-				<td>
-                    <?php if( $item->getQueryType() ==  Zend_Db_Profiler::SELECT ): ?>
-                        <a class="remoteCall" href="<?php echo $this->getSqlSelectUrl($item) ?>">SELECT</a><br />
-                        <a class="remoteCall" href="<?php echo $this->getSqlExplainUrl($item) ?>">EXPLAIN</a><br />
-                    <?php endif; ?>
-				</td>
-				<td class="syntax">
-					 <div class="djDebugSqlWrap">
-                         <div class="djDebugSql"><?php echo $item->getQuery() ?>
-                             <?php if( count($item->getQueryParams()) ): ?>
-                                <br/><strong>Params:</strong> <?php echo implode(', ', $item->getQueryParams()); ?>
-                            <?php endif; ?>
-                        </div>
-					 </div>
-				</td>
-			</tr>
-			<?php $row++; ?>
-		<?php endforeach ?>
-	</tbody>
-</table>
-<?php else: ?>
-    <p>SQL Profiler is not enabled. <a class="toggleTemplate" href="<?php echo Mage::getUrl('debug/index/toggleSqlProfiler') ?>">Enable SQL Profiler</a></p>
-<?php endif; ?> 
+
